--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
+    max-width: 600px;
+    margin: auto;
 }
 input, button {
     margin: 5px;
@@ -9,4 +11,18 @@ input, button {
 #sonuc {
     margin-top: 20px;
     font-weight: bold;
+}
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
+ul {
+    padding-left: 20px;
+}
+li {
+    margin-bottom: 10px;
 }
